# v402

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
clients/go/: README.md  go.mod
clients/go/pkg/client/: client.go
clients/go/pkg/config/: config.go
clients/go/pkg/errors/: errors.go
clients/go/pkg/log/: logger.go
clients/go/pkg/types/: models.go
clients/java/: README.md  pom.xml
clients/java/src/main/java/network/v402/client/: V402Client.java
clients/java/src/main/java/network/v402/client/config/: V402ClientProperties.java
clients/java/src/main/java/network/v402/client/model/: PaymentResponse.java
clients/python/: README.md  pyproject.toml
clients/python/src/v402_client/: __init__.py
clients/python/src/v402_client/chains/: evm.py  manager.py  solana.py
clients/python/src/v402_client/config/: settings.py
clients/python/src/v402_client/core/: async_client.py  client.py  pool.py
clients/python/src/v402_client/exceptions/: __init__.py  base.py  chain.py  network.py  payment.py
clients/python/src/v402_client/logging/: logger.py
clients/python/src/v402_client/monitoring/: metrics.py
clients/python/src/v402_client/payment/: history.py  manager.py
clients/python/src/v402_client/types/: enums.py  models.py
clients/python/src/v402_client/utils/: cache.py  retry.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: client.rs  lib.rs
examples/: README.md
examples/end_to_end_example/: run_e2e.py
examples/facilitator_example/: run_facilitator.py
examples/go/basic/: basic_client.go  main.go
examples/go/basic/client/: client.go  types.go
examples/go/basic/config/: config.go  errors.go
examples/go/basic/models/: models.go
examples/go/web_server/: main.go
examples/go/web_server/handlers/: analytics_handler.go  payment_handler.go  product_handler.go
examples/go/web_server/middleware/: middleware.go
examples/go/web_server/services/: analytics_service.go  payment_service.go  product_service.go
examples/index_client_example/: basic_client.py  batch_client.py
examples/java/spring-boot/: pom.xml
examples/java/spring-boot/src/main/java/network/v402/example/: V402SpringBootExampleApplication.java
examples/java/spring-boot/src/main/java/network/v402/example/controller/: V402Controller.java
examples/java/spring-boot/src/main/java/network/v402/example/model/: Payment.java  PaymentStatus.java  Product.java  ProductStatus.java
examples/java/spring-boot/src/main/java/network/v402/example/service/: PaymentService.java
examples/java/spring-boot/src/main/resources/: application.yml
examples/javascript/nextjs/components/: V402PaymentButton.module.css  V402PaymentButton.tsx
examples/javascript/nextjs/pages/: payment.tsx
examples/javascript/react/: premium-article.tsx
examples/javascript/vanilla/: simple-integration.html
examples/javascript/vue/: V402PaymentButton.vue
examples/javascript/web-components/: V402PaymentButton.js  index.html
examples/python/advanced/: advanced_client.py
examples/python/basic/: basic_client_example.py
examples/python/batch/: batch_processing.py
examples/python/integrations/django/: models.py  serializers.py  services.py  views.py
examples/python/integrations/fastapi/: main.py
examples/python/integrations/fastapi/config/: settings.py
examples/python/integrations/fastapi/models/: database.py
examples/python/integrations/fastapi/schemas/: models.py
examples/rust/basic/: Cargo.toml
examples/rust/basic/src/: client.rs  config.rs  main.rs  models.rs  services.rs
examples/rust/tokio_server/: Cargo.toml
examples/rust/tokio_server/src/: config.rs  handlers.rs  main.rs
providers/javascript/: README.md  package.json  vite.config.ts
providers/javascript/src/: index.ts
v402_facilitator/: .flake8  .gitignore  .pylintrc  API_DOCUMENTATION.md  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
v402_facilitator/src/: main.py
v402_facilitator/src/api/v1/: admin.py  clients.py  providers.py
v402_facilitator/src/core/: config.py
v402_facilitator/src/core/database/: __init__.py  connection.py
v402_facilitator/src/core/logging/: logger.py
v402_facilitator/src/models/: entities.py
v402_facilitator/src/services/: product_service.py
v402_facilitator/src/services/payment/: payment_manager.py
v402_facilitator/src/utils/helpers/: common.py
v402_facilitator/src/utils/validators/: payment_validator.py
v402_facilitator/src/v402_facilitator/: __init__.py  config.py  database.py  main.py  settlement.py  types.py  verification.py
v402_index_client/: README.md  pyproject.toml
v402_index_client/src/v402_index_client/: __init__.py  client.py  exceptions.py  types.py
v402_providers/: .editorconfig  .eslintrc.js  .gitignore  .prettierrc.json  CHANGELOG.md  LICENCE  README.md  package.json  tsconfig.json
v402_providers/.github/workflows/: ci.yml
v402_providers/src/constants/: api.ts  blockchain.ts  errors.ts  events.ts  index.ts  limits.ts
v402_providers/src/entities/: analytics.ts  base.ts  index.ts  payment.ts  product.ts
v402_providers/src/services/: base.ts  index.ts  product-service.ts
x402/src/x402/: exact.py  facilitator.py  paywall.py  types.py
x402/src/x402/clients/: __init__.py  base.py  httpx.py  requests.py
x402/src/x402/fastapi/: middleware.py
x402/src/x402/flask/: middleware.py
x402/tests/: test_exact.py
x402/tests/clients/: test_base.py  test_httpx.py  test_requests.py
