[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v402-index-client"
version = "0.1.0"
description = "Payment client SDK for AI/crawler platforms"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "eth-account>=0.9.0",
    "web3>=6.0.0",
    "aiofiles>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["v402_index_client*"]

